[package]
name = "code_matrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
clap = "3.2.17"
logger = { path = "../logger" }
[dependencies.sdl2]
version = "0.35.1"
features = ["ttf"]
