[package]
name = "tiledemo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rs-catgfx = { path = "../rs-catgfx" }
tilemap = { path = "../tilemap" }
clap = "3.2.17"

[dependencies.sdl2]
version = "0.35.2"
